--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,20 @@
 .portada{
+    border: 1px solid red;
+}
+
+.cabeza img {
+    height: 50px;
+}
+
+.menu ul{
+   
+}
+
+.menu a{
+    text-decoration: none;
+}
+
+.menu li{
     
+    list-style-type: none;
 }
