--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,11 @@
 body{
     background: coral;
 }
+hr{
+    margin-top: 0px;
+    width: 10%;
+    height: 2%;
+}
 
 .portada{
     margin: 5px 5px 5px 5px;
@@ -66,39 +71,33 @@ body{
 .grupo{
     display: flex;
     justify-content: center;
-    align-items: center;    
 }
 
 .p1{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 30px;
     background: white;
-    border: 1px solid green;
-    height: 100%;
+    height: 90%;
     width: 60%;
 }
 
+
+
 .p1 img{
-    padding: 0px;
-    height: 400px;
+    
+    margin-bottom: 30px;
+    height: 352px; 
 }
 
-.p2{
-    background: white;
-    border: 1px solid orange;
-    height: 350px;
-    width: 300px;
-}
 .p2 img{
-    height: 30%;
+    height: 352px; 
+    width: 279px;
 }
 
-.p3{
-    background: white;
-    border: 1px solid red;
-    height: 350px;
-    width: 300px;;
-}
 .p3 img{
-    height: 20%;
+    height: 352px;
+    width: 280px;
 }
 @media screen and (min-width: 768px){
     .portada{
@@ -120,5 +119,11 @@ body{
         color: white;
     }
     
+    .grupo{
+        display: grid;
+        grid-template-rows: 1fr;
+        align-items: center;
+        grid-row-gap: 5px;
+    }
 
 }
